--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
+/[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 
@@ -25,6 +26,8 @@ ExportedObj/
 sysinfo.txt
 
 # Builds
+*.apk
+*.ipa
 *.unitypackage
 Assets/Plugins/
 Assets/GoogleVR/
